# mbed-os

./: README.md
targets/: targets.json
targets/TARGET_STM/TARGET_STM32U5/: PeripheralNames.h  analogin_device.c  i2c_device.c  serial_device.c
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U595xJ/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U595xJ/TARGET_STM32U595ZJT_Q/: CMakeLists.txt  PeripheralPins.c  PinNames.h
targets/TARGET_STM/TARGET_STM32U5/TARGET_STM32U595xJ/TOOLCHAIN_GCC_ARM/: startup_stm32u595xx.S  stm32u595xj.ld
